--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "author": "Lambda School",
   "devDependencies": {
+    "eslint": "^6.6.0",
     "nodemon": "^1.19.2"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
